# ctl-secp-mre

./: Makefile  README.md  ctl-secp-mre.cabal  hie.yaml
app/serialise/: Main.hs
ctl/: spago-packages.nix  spago.dhall
ctl/src/: Main.purs  PoCECDSA.purs  RawScripts.purs
src/: PoCECDSA.hs
