cabal-version:      3.0
name:               ctl-secp-mre
version:            0.1
synopsis:           TODO
description:        TODO
homepage:           https://github.com/mlabs-haskell/ctl-secp-mre
bug-reports:        https://github.com/mlabs-haskell/ctl-secp-mre
license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/ctl-secp-mre

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin=RecordDotPreprocessor -fplugin-opt
    PlutusTx.Plugin:defer-errors -Werror

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules: PoCECDSA
  build-depends:
    , aeson                ^>=1.5.0.0
    , base16-bytestring
    , bytestring           ^>=0.10.12.0
    , cardano-api
    , cardano-crypto
    , deepseq
    , playground-common
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src

executable serialise
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , bytestring
    , cardano-api
    , ctl-secp-mre
    , plutus-ledger
    , serialise

  hs-source-dirs: app/serialise
